k8s/mongodb-replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-replica
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongodb-replica
  template:
    metadata:
      labels:
        app: mongodb-replica
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
        command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc-1
